# wide

./: AUTHORS  ChangeLog  NEWS  README  README.md  configure.ac
doc/: Makefile.am  vas.texi
